// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PublicationsList > renders empty list > PublicationsList - empty 1`] = `
<div>
  <ul
    class="flex flex-col gap-1 relative"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root absolute h-full w-full bg-white/50 css-1rxxzfv-MuiBackdrop-root"
      style="opacity: 0; visibility: hidden;"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-nbluux-MuiCircularProgress-root"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
    </div>
  </ul>
</div>
`;

exports[`PublicationsList > renders snapshot > PublicationsList 1`] = `
<div>
  <ul
    class="flex flex-col gap-1 relative"
  >
    <li
      aria-describedby=""
      aria-disabled="false"
      aria-label="Edit publication"
      aria-roledescription="sortable"
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root group border border-transparent bg-(--color-background-alt) cursor-pointer hover:border-(--color-hover-border) hover:bg-(--color-hover-alt) css-1j74uew-MuiPaper-root-MuiCard-root"
      role="button"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      tabindex="0"
    >
      <div
        class="MuiCardContent-root p-4 css-1lt5qva-MuiCardContent-root"
      >
        <div
          class="cardItem"
        >
          <div
            class="flex flex-col gap-2"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2 normal-case css-10p1e2f-MuiTypography-root"
            >
              paperback
            </h2>
            <p
              class="MuiTypography-root MuiTypography-body1 cardItem css-pucm0b-MuiTypography-root"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-colorPrimary MuiIcon-fontSizeSmall css-14s6uzk-MuiIcon-root"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 7V5a2 2 0 0 1 2-2h2"
                  />
                  <path
                    d="M17 3h2a2 2 0 0 1 2 2v2"
                  />
                  <path
                    d="M21 17v2a2 2 0 0 1-2 2h-2"
                  />
                  <path
                    d="M7 21H5a2 2 0 0 1-2-2v-2"
                  />
                  <path
                    d="M8 7v10"
                  />
                  <path
                    d="M12 7v10"
                  />
                  <path
                    d="M17 7v10"
                  />
                </svg>
              </span>
              978-1-234-56789-0
            </p>
            <div
              class="flex items-center gap-2"
            />
          </div>
          <div
            class="MuiCardActions-root MuiCardActions-spacing ml-auto opacity-0 *:cursor-auto group-hover:opacity-100 css-1q4nm6f-MuiCardActions-root"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="DeleteOutlineIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM8 9h8v10H8zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </li>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root border border-(--color-hover-border) bg-(--color-hover-alt) css-1j74uew-MuiPaper-root-MuiCard-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12); display: none !important;"
    >
      <div
        class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
      >
        <div />
      </div>
    </div>
    <li
      aria-describedby=""
      aria-disabled="false"
      aria-label="Edit publication"
      aria-roledescription="sortable"
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root group border border-transparent bg-(--color-background-alt) cursor-pointer hover:border-(--color-hover-border) hover:bg-(--color-hover-alt) css-1j74uew-MuiPaper-root-MuiCard-root"
      role="button"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      tabindex="0"
    >
      <div
        class="MuiCardContent-root p-4 css-1lt5qva-MuiCardContent-root"
      >
        <div
          class="cardItem"
        >
          <div
            class="flex flex-col gap-2"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2 normal-case css-10p1e2f-MuiTypography-root"
            >
              hardcover
            </h2>
            <p
              class="MuiTypography-root MuiTypography-body1 cardItem css-pucm0b-MuiTypography-root"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-colorPrimary MuiIcon-fontSizeSmall css-14s6uzk-MuiIcon-root"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 7V5a2 2 0 0 1 2-2h2"
                  />
                  <path
                    d="M17 3h2a2 2 0 0 1 2 2v2"
                  />
                  <path
                    d="M21 17v2a2 2 0 0 1-2 2h-2"
                  />
                  <path
                    d="M7 21H5a2 2 0 0 1-2-2v-2"
                  />
                  <path
                    d="M8 7v10"
                  />
                  <path
                    d="M12 7v10"
                  />
                  <path
                    d="M17 7v10"
                  />
                </svg>
              </span>
              978-0-123-45678-9
            </p>
            <div
              class="flex items-center gap-2"
            />
          </div>
          <div
            class="MuiCardActions-root MuiCardActions-spacing ml-auto opacity-0 *:cursor-auto group-hover:opacity-100 css-1q4nm6f-MuiCardActions-root"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="DeleteOutlineIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM8 9h8v10H8zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </li>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root border border-(--color-hover-border) bg-(--color-hover-alt) css-1j74uew-MuiPaper-root-MuiCard-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12); display: none !important;"
    >
      <div
        class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
      >
        <div />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root absolute h-full w-full bg-white/50 css-1rxxzfv-MuiBackdrop-root"
      style="opacity: 0; visibility: hidden;"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-nbluux-MuiCircularProgress-root"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
    </div>
  </ul>
</div>
`;

exports[`PublicationsList > renders with callbacks > PublicationsList - with callbacks 1`] = `
<div>
  <ul
    class="flex flex-col gap-1 relative"
  >
    <li
      aria-describedby=""
      aria-disabled="false"
      aria-label="Edit publication"
      aria-roledescription="sortable"
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root group border border-transparent bg-(--color-background-alt) cursor-pointer hover:border-(--color-hover-border) hover:bg-(--color-hover-alt) css-1j74uew-MuiPaper-root-MuiCard-root"
      role="button"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      tabindex="0"
    >
      <div
        class="MuiCardContent-root p-4 css-1lt5qva-MuiCardContent-root"
      >
        <div
          class="cardItem"
        >
          <div
            class="flex flex-col gap-2"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2 normal-case css-10p1e2f-MuiTypography-root"
            >
              paperback
            </h2>
            <p
              class="MuiTypography-root MuiTypography-body1 cardItem css-pucm0b-MuiTypography-root"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-colorPrimary MuiIcon-fontSizeSmall css-14s6uzk-MuiIcon-root"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 7V5a2 2 0 0 1 2-2h2"
                  />
                  <path
                    d="M17 3h2a2 2 0 0 1 2 2v2"
                  />
                  <path
                    d="M21 17v2a2 2 0 0 1-2 2h-2"
                  />
                  <path
                    d="M7 21H5a2 2 0 0 1-2-2v-2"
                  />
                  <path
                    d="M8 7v10"
                  />
                  <path
                    d="M12 7v10"
                  />
                  <path
                    d="M17 7v10"
                  />
                </svg>
              </span>
              978-1-234-56789-0
            </p>
            <div
              class="flex items-center gap-2"
            />
          </div>
          <div
            class="MuiCardActions-root MuiCardActions-spacing ml-auto opacity-0 *:cursor-auto group-hover:opacity-100 css-1q4nm6f-MuiCardActions-root"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="DeleteOutlineIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM8 9h8v10H8zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </li>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root border border-(--color-hover-border) bg-(--color-hover-alt) css-1j74uew-MuiPaper-root-MuiCard-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12); display: none !important;"
    >
      <div
        class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
      >
        <div />
      </div>
    </div>
    <li
      aria-describedby=""
      aria-disabled="false"
      aria-label="Edit publication"
      aria-roledescription="sortable"
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root group border border-transparent bg-(--color-background-alt) cursor-pointer hover:border-(--color-hover-border) hover:bg-(--color-hover-alt) css-1j74uew-MuiPaper-root-MuiCard-root"
      role="button"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      tabindex="0"
    >
      <div
        class="MuiCardContent-root p-4 css-1lt5qva-MuiCardContent-root"
      >
        <div
          class="cardItem"
        >
          <div
            class="flex flex-col gap-2"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2 normal-case css-10p1e2f-MuiTypography-root"
            >
              hardcover
            </h2>
            <p
              class="MuiTypography-root MuiTypography-body1 cardItem css-pucm0b-MuiTypography-root"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-colorPrimary MuiIcon-fontSizeSmall css-14s6uzk-MuiIcon-root"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 7V5a2 2 0 0 1 2-2h2"
                  />
                  <path
                    d="M17 3h2a2 2 0 0 1 2 2v2"
                  />
                  <path
                    d="M21 17v2a2 2 0 0 1-2 2h-2"
                  />
                  <path
                    d="M7 21H5a2 2 0 0 1-2-2v-2"
                  />
                  <path
                    d="M8 7v10"
                  />
                  <path
                    d="M12 7v10"
                  />
                  <path
                    d="M17 7v10"
                  />
                </svg>
              </span>
              978-0-123-45678-9
            </p>
            <div
              class="flex items-center gap-2"
            />
          </div>
          <div
            class="MuiCardActions-root MuiCardActions-spacing ml-auto opacity-0 *:cursor-auto group-hover:opacity-100 css-1q4nm6f-MuiCardActions-root"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="DeleteOutlineIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM8 9h8v10H8zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </li>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root border border-(--color-hover-border) bg-(--color-hover-alt) css-1j74uew-MuiPaper-root-MuiCard-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12); display: none !important;"
    >
      <div
        class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
      >
        <div />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root absolute h-full w-full bg-white/50 css-1rxxzfv-MuiBackdrop-root"
      style="opacity: 0; visibility: hidden;"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-nbluux-MuiCircularProgress-root"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
    </div>
  </ul>
</div>
`;
